--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -159,7 +159,7 @@
 
       <!-- Substack -->
       {% if author.substack %}
-        <li><a href="{{ author.substack }}"><img src="{{ base_path }}/images/substack.png" alt="Substack" class="icon-pad-right" style="width: 20px; height: 20px;">Substack</a></li>
+        <li><a href="{{ author.substack }}" target="_blank"><img src="{{ base_path }}/images/substack.png" alt="Substack" class="icon-pad-right" style="width: 20px; height: 20px;">Substack</a></li>
       {% endif %}
     </ul>
   </div>
